--- a/requirements_py313.txt
+++ b/requirements_py313.txt
@@ -1,5 +1,9 @@
+# Python 3.13 compatible requirements
 streamlit>=1.28.0
 openai>=1.0.0
 python-dotenv>=1.0.0
 Pillow>=12.0.0
 reportlab>=4.4.4
+Flask>=2.3.3
+gunicorn>=21.2.0
+httpx>=0.24.1
